// proto/product.proto
syntax = "proto3";

package product;

service ProductService {
    rpc GetProduct (ProductRequest) returns (ProductResponse);
    rpc InsertProduct (Product) returns (ProductResponse);
}

message ProductRequest {
    int32 id = 1;
}

message ProductResponse {
    int32 id = 1;
    string name = 2;
    float price = 3;
}

message Product {
    string name = 1;
    float price = 2;
}
